--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Javascript index.html-file with minified javascript bundle and fast-optimization.
+
+Uses lihaoy's workbench to make a localhost and show the SP-Widgets
+-->
 <html>
   <head>
     <meta charset="UTF-8">
@@ -6,16 +11,21 @@
   </head>
   <body>
     <section id="spgui-root"></section>
+    <!--Minified Javascript bundle-->
     <script type="text/javascript" src="./bundle.min.js"></script>
 
     <!--<script type="text/javascript" src="js/target/scala-2.12/spgui-jsdeps.min.js"></script>-->
+    <!--Full Javascript dependency-->
     <script type="text/javascript" src="../sp-gui-jsdeps.js"></script>
 
     <!--<script type="text/javascript" src="js/target/scala-2.12/spgui-opt.js"></script>-->
+    <!--Fast Optimization for project. Tag: DocHelp. -->
     <script type="text/javascript" src="../sp-gui-fastopt.js"></script>
-
+    <!--Include Workbench from lihaoy-->
     <script type="text/javascript" src="/workbench.js"></script>
-
+    <!--
+        Calls the Main in FrontendOnlyMain.main().
+      -->
     <script type="text/javascript">
       spgui.FrontendOnlyMain().main();
     </script>
