--- a/jvm/src/main/resources/index-prod.html
+++ b/jvm/src/main/resources/index-prod.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
+<!--
+Production HTML File with minified javascript bundle and full-optimization.
+
+Example:
+        In sp-control\frontend\src\main\scala\spgui\Main.scala we
+        make the class visible for the dom as spgui.Main and calls the main().
+        In main() we render the dom with
+        Layout().renderIntoDOM(document.getElementById("spgui-root"))
+-->
 <html>
   <head>
     <meta charset="UTF-8">
     <title>Sequence Planner</title>
   </head>
   <body>
-    <section id="spgui-root"></root>
+    <section id="spgui-root"></section>
+    <!--Minified Javascript bundle-->
     <script type="text/javascript" src="npmdependencies/output/bundle.min.js"></script>
+    <!--Full Javascript dependency-->
     <script type="text/javascript" src="target/scala-2.11/spgui-jsdeps.js"></script>
+    <!--Full Optimization for project. Tag: DocHelp. -->
     <script type="text/javascript" src="target/scala-2.11/spgui-opt.js"></script>
-    <script type="text/javascript">
-      spgui.Main().main();
-    </script>
+    <!--Calls the Main function in your project.-->
+    <script type="text/javascript">spgui.Main().main();</script>
   </body>
 </html>
