--- a/jvm/src/main/resources/index-spgui.html
+++ b/jvm/src/main/resources/index-spgui.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+SP-GUI HTML File with full javascript bundle and fast-optimization.
+
+Example:
+        In sp-control\frontend\src\main\scala\spgui\Main.scala we
+        make the class visible for the dom as spgui.Main and calls the main().
+        In main() we render the dom with
+        Layout().renderIntoDOM(document.getElementById("spgui-root"))
+-->
 <html>
   <head>
     <meta charset="UTF-8">
@@ -6,14 +15,18 @@
   </head>
   <body>
     <section id="spgui-root"></section>
+    <!--Full Javascript bundle-->
     <script type="text/javascript" src="npmdependencies/output/bundle.js"></script>
 
     <!--<script type="text/javascript" src="target/scala-2.12/spgui-jsdeps.min.js"></script>-->
+    <!--Full Javascript dependency-->
     <script type="text/javascript" src="target/scala-2.12/spgui-jsdeps.js"></script>
 
     <!--<script type="text/javascript" src="target/scala-2.12/spgui-opt.js"></script>-->
+    <!--Fast Optimization for project. Tag: DocHelp. -->
     <script type="text/javascript" src="target/scala-2.12/spgui-fastopt.js"></script>
 
+    <!--Calls the Main function in your project.-->
     <script type="text/javascript">
       spgui.Main().main();
     </script>
