Documentation: Looked through files, added docs and changed name on vals here and there

--- a/jvm/src/main/resources/index-prod.html
+++ b/jvm/src/main/resources/index-prod.html
@@ -2,11 +2,7 @@
 <!--
 Production HTML File with minified javascript bundle and full-optimization.
 
-Example:
-        In sp-control\frontend\src\main\scala\spgui\Main.scala we
-        make the class visible for the dom as spgui.Main and calls the main().
-        In main() we render the dom with
-        Layout().renderIntoDOM(document.getElementById("spgui-root"))
+Tag: DocHelp. Where is spguiJVM used?
 -->
 <html>
   <head>
