Cleaned all old code in this and last commit (ca869b38056d3408a8af8cf19246383f7f6a30ff)

--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -12,7 +12,7 @@ Uses lihaoy's workbench to make a localhost and show the SP-Widgets
   <body>
     <section id="spgui-root"></section>
     <!--Minified Javascript bundle-->
-    <script type="text/javascript" src="./bundle.min.js"></script>
+    <!--<script type="text/javascript" src="./bundle.min.js"></script>-->
 
     <!--<script type="text/javascript" src="js/target/scala-2.12/spgui-jsdeps.min.js"></script>-->
     <!--Full Javascript dependency-->
@@ -27,7 +27,7 @@ Uses lihaoy's workbench to make a localhost and show the SP-Widgets
         Calls the Main in FrontendOnlyMain.main().
       -->
     <script type="text/javascript">
-      spgui.FrontendOnlyMain().main();
+
     </script>
   </body>
 </html>
