--- a/jvm/src/main/resources/index-prod.html
+++ b/jvm/src/main/resources/index-prod.html
@@ -12,12 +12,13 @@ Tag: DocHelp. Where is spguiJVM used?
   <body>
     <section id="spgui-root"></section>
     <!--Minified Javascript bundle-->
-    <script type="text/javascript" src="npmdependencies/output/bundle.min.js"></script>
+    <!--
+    <script type="text/javascript" src="npmdependencies/output/bundle.min.js"></script>-->
     <!--Full Javascript dependency-->
     <script type="text/javascript" src="target/scala-2.11/spgui-jsdeps.js"></script>
     <!--Full Optimization for project. Tag: DocHelp. -->
     <script type="text/javascript" src="target/scala-2.11/spgui-opt.js"></script>
     <!--Calls the Main function in your project.-->
-    <script type="text/javascript">spgui.Main().main();</script>
+    <script type="text/javascript"></script>
   </body>
 </html>
