--- a/jvm/src/main/resources/index-spgui.html
+++ b/jvm/src/main/resources/index-spgui.html
@@ -11,9 +11,9 @@ Tag: DocHelp. Where is spguiJVM used?
   </head>
   <body>
     <section id="spgui-root"></section>
-    <!--Full Javascript bundle-->
+    <!--Full Javascript bundle--><!--
     <script type="text/javascript" src="npmdependencies/output/bundle.js"></script>
-
+-->
     <!--<script type="text/javascript" src="target/scala-2.12/spgui-jsdeps.min.js"></script>-->
     <!--Full Javascript dependency-->
     <script type="text/javascript" src="target/scala-2.12/spgui-jsdeps.js"></script>
@@ -24,7 +24,7 @@ Tag: DocHelp. Where is spguiJVM used?
 
     <!--Calls the Main function in your project.-->
     <script type="text/javascript">
-      spgui.Main().main();
+
     </script>
   </body>
 </html>
