--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -14,17 +14,8 @@ Uses lihaoy's workbench to make a localhost and show the SP-Widgets
   <script type="text/javascript" src="/workbench.js"></script>
 </head>
 <body>
-<section id="spgui-root"></section>
+<section id="root"></section>
 
-<!-- IMPORT SCALAJS-BUNDLER SCRIPTS -->
-<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-opt.js"></script>
-<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-opt-bundle.js"></script>
-<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-opt-entrypoint.js"></script>
-<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-opt-library.js"></script>
-<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-opt-loader.js"></script>
-<!--Full Javascript dependency, but right now empty 25-07-2018::10:28 -->
-<script type="text/javascript" src="../sp-gui-jsdeps.js"></script>
-
-<script type="text/javascript">spgui.Main().main();</script>
+<script type="text/javascript" src="../scalajs-bundler/main/sp-gui-fastopt-bundle.js"></script>
 </body>
 </html>
