Commented stable version #4

--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -10,12 +10,13 @@ Uses lihaoy's workbench to make a localhost and show the SP-Widgets
 <head>
   <title>Sequence Planner</title>
   <meta charset="UTF-8">
-  <!--Include Workbench from lihaoy-->
+  <!-- Use Workbench from lihaoy-->
   <script type="text/javascript" src="/workbench.js"></script>
 </head>
 <body>
+<!-- Targeted div from Main.main() -->
 <section id="root"></section>
-
+<!-- Adds generated saclajs-bundler file -->
 <script type="text/javascript" src="../scalajs-bundler/main/sp-gui-fastopt-bundle.js"></script>
 </body>
 </html>
