Fixed error in fastOptJS::webpack with scala.Either

--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -15,7 +15,7 @@ Uses lihaoy's workbench to make a localhost and show the SP-Widgets
 </head>
 <body>
 <!-- Targeted div from Main.main() -->
-<section id="root"></section>
+<section id="spgui-root"></section>
 <!-- Adds generated saclajs-bundler file -->
 <script type="text/javascript" src="../scalajs-bundler/main/sp-gui-fastopt-bundle.js"></script>
 </body>
